# pig-latinizer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_test.sh  install_dependencies.sh  sfml-instructions  translator_gui_theme.txt
include/: ImageTranslator.hpp  InverseTranslator.hpp  PigLatinTranslator.hpp  Translator.hpp  TranslatorGUI.hpp
src/: CommandParser.hpp  ImageTranslator.cpp  InformativeAssert.hpp  InverseTranslator.cpp  PigLatinTranslator.cpp  Translator.cpp  Translator.hpp  TranslatorGUI.cpp  inv_translator_app.cpp  translator_app.cpp
src/CLP/: CLP.hpp  CMakeLists.txt  CommandLineArgument.cpp  CommandLineArgument.hpp  CommandLineParser.cpp  CommandLineParser.hpp  InformativeAssert.hpp  argument_parser.hpp  default_parsers.hpp  helper_functions.cpp  helper_functions.hpp
test/: translator_test.cpp
